--- a/style.css
+++ b/style.css
@@ -11,27 +11,27 @@
 	justify-content:center;
 }
 nav{
-	background-color:#0a0000;
+	background-color:#450f0f;
 	height:35px;
 	width:100%;
 	position:fixed;
 	display:flex;
 	align-items:center;
 	justify-content:flex-end;
-	color:white;
+	color:black;
 	z-index:1;
 }
 nav a{
-	font-size:25px;
-	margin:0 5% 0 5%;
+	font-size:30px;
+	margin:0 1% 0 1%;
 }
 nav a:hover{
-	color:#43A047;
+	color:#f0f5f0;
 }
 main div{
 	display:flex;
 	flex-direction:column;
-	height:50vh;
+	height:60vh;
 	align-items:center;
 	justify-content:center;
 }
@@ -65,13 +65,13 @@ a, a:hover, a:active, a:focus, a:visited{
 	text-decoration:none;
 }
 
-@media (max-width:800px){
+@media (max-width:1000px){
 	nav{
 	background-color:#450f0f;
-	height:100px;
+	height:50px;
 	width:100%;
 	position:fixed;
-	display:flex;
+	display:fixed;
 	align-items:center;
 	justify-content:center;
 	color:black;
